--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,4 +29,4 @@ steps:
     containerRegistry: 'raksarkadockerII'
     repository: 'raktimtech1989/azuredevopsraktim'
     command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: '**/AzureDockerfile'
